# faultattack.github.io

./: README.md  WORKFLOW.md  WORKSHEET.md  fault_model.rs  fault_model_usb_serial.uf2  glitch_demo.uf2  hello.uf2
firmwares/: CMakeLists.txt  PISA_flash_sram_eeprom_tests.ino  README.md  glitch_detect.c  hello.c  main.c  picoemp.uf2
firmwares/prebuilt/: disobey_badge.hex  flag.elf  flag.uf2  glitch_detect.elf  glitch_detect.uf2  hello.elf  hello.uf2  mock_target.elf  mock_target.uf2
hw-protoing/: README.md
scripting/: pwn_uart.py
